syntax = "proto3";

package user;

import "common.proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc VerifyUser (VerifyUserRequest) returns (common.StatusResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message VerifyUserRequest {
  string user_id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
  bool kyc_verified = 6;
}
